So many problems1

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
   <app-root></app-root>
+  <script src="http://maps.googleapis.com/maps/api/js"></script>
 </body>
 </html>
